external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/non_string_local_dep_path/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: TOML parse error at line 6, column 5
  |
6 | A = { local = 1 }
  |     ^^^^^^^^^^^^^
invalid type: integer `1`, expected path string for key `local`
